--- a/modules/logbook/client/views/list-logbook.client.view.html
+++ b/modules/logbook/client/views/list-logbook.client.view.html
@@ -1,20 +1,28 @@
 <section ng-controller="LogbookController" ng-init="find()">
   <div class="page-header">
-    <h1>Logbook</h1>
+    <h1>Logbook ✈</h1>
   </div>
   <div class="list-group">
     <a ng-repeat="logbook in logbook" ui-sref="logbook.view({logbookId: logbook._id})" class="list-group-item">
-      <small class="list-group-item-text">
-        Posted on
-        <span ng-bind="logbook.created | date:'mediumDate'"></span>
-        by
-        <span ng-bind="logbook.user.displayName"></span>
-      </small>
-      <h4 class="list-group-item-heading" ng-bind="logbook.title"></h4>
-      <p class="list-group-item-text" ng-bind="logbook.content"></p>
+      <h4>
+      <span class="list-group-item-text">
+        <span ng-bind="logbook.date | date:'MM/dd/yy'"></span>
+      </span>
+      <span>&nbsp;&nbsp;</span>
+      <span class="list-group-item-heading" ng-bind="logbook.from"></span>
+      <span>✈</span>
+      <span class="list-group-item-heading" ng-bind="logbook.to"></span>
+      <span>&nbsp;&nbsp;</span>
+      <span class="list-group-item-heading" ng-bind="logbook.aircraftID"></span>
+      <span>&nbsp;&nbsp;</span>
+      <span class="list-group-item-heading" ng-bind="logbook.aircraftType"></span>
+      <span>&nbsp;&nbsp;</span>
+      <span class="list-group-item-heading" ng-bind="logbook.totalTime"></span>
+      <span>Total Time</span>
+      </h4>
     </a>
   </div>
   <div>
-    <button class="btn btn-primary" ui-sref="logbook.create">Log a Flight</button>
+    <button class="btn btn-primary" ui-sref="logbook.create">Log a Flight ✈</button>
   </div>
 </section>
